--- a/views/admin/country/create.ejs
+++ b/views/admin/country/create.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<% layout('layouts/boilerplate') %>
 
 <!-- BEGIN: Content-->
 <div class="app-content content ">
@@ -39,14 +39,16 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">Country Name</label>
-                                                <input type="text" class="form-control" id="fname" name="country[name]" placeholder="First Name" />
+                                                <input type="text" class="form-control" id="fname" name="country[name]"
+                                                    placeholder="First Name" />
                                             </div>
                                         </div>
-                                        
+
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="country">Code</label>
-                                                <input type="text" class="form-control" id="country" name="country[code]" placeholder="Country" />
+                                                <input type="text" class="form-control" id="country"
+                                                    name="country[code]" placeholder="Country" />
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
@@ -62,7 +64,7 @@
                 </div>
             </section>
             <!-- Basic Inputs end -->
-            </div>
+        </div>
 
     </div>
 </div>
