--- a/views/admin/facility/edit.ejs
+++ b/views/admin/facility/edit.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<% layout('layouts/boilerplate') %>
 
 <!-- BEGIN: Content-->
 <div class="app-content content ">
@@ -39,25 +39,33 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Name</label>
-                                                <input type="text" class="form-control" id="name" value="<%= facility.name  %> " name="facility[name]" placeholder="Name" />
+                                                <input type="text" class="form-control" id="name"
+                                                    value="<%= facility.name  %> " name="facility[name]"
+                                                    placeholder="Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="duration">Duration</label>
-                                                <input type="text" class="form-control" id="duration" value="<%= facility.duration  %> " name="facility[duration]" placeholder="Duration" />
+                                                <input type="text" class="form-control" id="duration"
+                                                    value="<%= facility.duration  %> " name="facility[duration]"
+                                                    placeholder="Duration" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="headcount">Head Count</label>
-                                                <input type="text" class="form-control" id="headcount" value="<%= facility.headcount  %> " name="facility[headcount]" placeholder="Head Count" />
+                                                <input type="text" class="form-control" id="headcount"
+                                                    value="<%= facility.headcount  %> " name="facility[headcount]"
+                                                    placeholder="Head Count" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="price">Price</label>
-                                                <input type="text" class="form-control" id="price" value="<%= facility.price  %> " name="facility[price]" placeholder="Head Count" />
+                                                <input type="text" class="form-control" id="price"
+                                                    value="<%= facility.price  %> " name="facility[price]"
+                                                    placeholder="Head Count" />
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
