--- a/views/admin/room/create.ejs
+++ b/views/admin/room/create.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<% layout('layouts/boilerplate') %>
 
 <!-- BEGIN: Content-->
 <div class="app-content content ">
@@ -39,25 +39,29 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Room Number</label>
-                                                <input type="text" class="form-control" id="name" name="room[number]" placeholder="Room Number" />
+                                                <input type="text" class="form-control" id="name" name="room[number]"
+                                                    placeholder="Room Number" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Room Charge</label>
-                                                <input type="text" class="form-control" id="name" name="room[charge]" placeholder="Room Charge" />
+                                                <input type="text" class="form-control" id="name" name="room[charge]"
+                                                    placeholder="Room Charge" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Head Count</label>
-                                                <input type="text" class="form-control" id="name" name="room[headcount]" placeholder="Head Count" />
+                                                <input type="text" class="form-control" id="name" name="room[headcount]"
+                                                    placeholder="Head Count" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Image </label>
-                                                <input type="text" class="form-control" id="name" name="room[image]" placeholder="Image" />
+                                                <input type="text" class="form-control" id="name" name="room[image]"
+                                                    placeholder="Image" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -68,7 +72,7 @@
                                                     <option value="Regular">Regular</option>
                                                 </select>
                                             </div>
-                                        </div>                                       
+                                        </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
                                             <div class="form-group">
                                                 <button class="btn btn-primary" type="submit">Submit</button>
@@ -82,7 +86,7 @@
                 </div>
             </section>
             <!-- Basic Inputs end -->
-            </div>
+        </div>
 
     </div>
 </div>
