--- a/views/admin/user/edit.ejs
+++ b/views/admin/user/edit.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<% layout('layouts/boilerplate') %>
 
 <!-- BEGIN: Content-->
 <div class="app-content content ">
@@ -39,41 +39,51 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
-                                                <input type="text" class="form-control" id="fname" value="<%=user.fname%>" name="user[fname]" placeholder="First Name" />
+                                                <input type="text" class="form-control" id="fname"
+                                                    value="<%=user.fname%>" name="user[fname]"
+                                                    placeholder="First Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="lname">Last Name</label>
-                                                <input type="text" class="form-control" id="lname" value="<%=user.lname%>" name="user[lname]" placeholder="Last Name" />
+                                                <input type="text" class="form-control" id="lname"
+                                                    value="<%=user.lname%>" name="user[lname]"
+                                                    placeholder="Last Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="role">Last Name</label>
-                                                <select class="form-control" value="<%=user.role%>" name="user[role]" id="role">
+                                                <select class="form-control" value="<%=user.role%>" name="user[role]"
+                                                    id="role">
                                                     <option value="a">Admin</option>
                                                     <option value="r">Receptionist</option>
                                                 </select>
-                                               
+
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="email">Email</label>
-                                                <input type="text" class="form-control" id="email" value="<%=user.email%>" name="user[email]" placeholder="Enter email" />
+                                                <input type="text" class="form-control" id="email"
+                                                    value="<%=user.email%>" name="user[email]"
+                                                    placeholder="Enter email" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="username">Username</label>
-                                                <input type="text" class="form-control" id="username" value="<%=user.username%>" name="user[username]" placeholder="Username" />
+                                                <input type="text" class="form-control" id="username"
+                                                    value="<%=user.username%>" name="user[username]"
+                                                    placeholder="Username" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="password">Password</label>
-                                                <input type="password" class="form-control" id="password" name="user[password]" placeholder="Password" />
+                                                <input type="password" class="form-control" id="password"
+                                                    name="user[password]" placeholder="Password" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -82,7 +92,7 @@
                                             </div>
                                         </div>
                                     </div>
-                            </form>
+                                </form>
                             </div>
                         </div>
                     </div>
