--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -49,59 +49,59 @@
     <div class="shadow-bottom"></div>
     <div class="main-menu-content">
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-            <li class="<%= (url.includes("/admin/dashboard"))?'active':'' %> nav-item"><a class="d-flex align-items-center" href="/admin/dashboard"><i
-                        data-feather="home"></i><span class="menu-title text-truncate"
-                        data-i18n="Dashboards">Dashboard</span></a>
+            <li class="<%= (url.includes("/admin/dashboard"))?'active':'' %> nav-item"><a
+                    class="d-flex align-items-center" href="/admin/dashboard"><i data-feather="home"></i><span
+                        class="menu-title text-truncate" data-i18n="Dashboards">Dashboard</span></a>
             </li>
 
             <li class=" navigation-header"><span data-i18n="Apps &amp; Pages">Apps &amp; Pages</span><i
                     data-feather="more-horizontal"></i>
             </li>
-            <li class="<%= (url.includes("/admin/user"))?'active':'' %> nav-item"><a class="d-flex align-items-center" href="/admin/user"><i
-                        data-feather="user"></i><span class="menu-title text-truncate"
+            <li class="<%= (url.includes("/admin/user"))?'active':'' %> nav-item"><a class="d-flex align-items-center"
+                    href="/admin/user"><i data-feather="user"></i><span class="menu-title text-truncate"
                         data-i18n="Users">Users</span></a>
             </li>
-            <li class="<%= (url.includes("/admin/customer"))?'active':'' %> nav-item"><a class="d-flex align-items-center " href="/admin/customer"><i
-                        data-feather="user"></i><span class="menu-title text-truncate"
-                        data-i18n="Customer">Customer</span></a>
-                         
+            <li class="<%= (url.includes("/admin/customer"))?'active':'' %> nav-item"><a
+                    class="d-flex align-items-center " href="/admin/customer"><i data-feather="user"></i><span
+                        class="menu-title text-truncate" data-i18n="Customer">Customer</span></a>
+
             </li>
-            <li class="<%= (url.includes("/admin/room"))?'active':'' %> nav-item"><a class="d-flex align-items-center " href="/admin/room"><i
-                        data-feather="user"></i><span class="menu-title text-truncate"
+            <li class="<%= (url.includes("/admin/room"))?'active':'' %> nav-item"><a class="d-flex align-items-center "
+                    href="/admin/room"><i data-feather="user"></i><span class="menu-title text-truncate"
                         data-i18n="Room">Room</span></a>
-                         
+
             </li>
-            <li class="<%= (url.includes("/admin/package"))?'active':'' %> nav-item"><a class="d-flex align-items-center " href="/admin/package"><i
-                        data-feather="user"></i><span class="menu-title text-truncate"
-                        data-i18n="Package">Package</span></a>
-                         
+            <li class="<%= (url.includes("/admin/package"))?'active':'' %> nav-item"><a
+                    class="d-flex align-items-center " href="/admin/package"><i data-feather="user"></i><span
+                        class="menu-title text-truncate" data-i18n="Package">Package</span></a>
+
             </li>
-            <li class="<%= (url.includes("/admin/facility"))?'active':'' %> nav-item"><a class="d-flex align-items-center " href="/admin/facility"><i
-                        data-feather="user"></i><span class="menu-title text-truncate"
-                        data-i18n="Facility">Facility</span></a>
-                         
+            <li class="<%= (url.includes("/admin/facility"))?'active':'' %> nav-item"><a
+                    class="d-flex align-items-center " href="/admin/facility"><i data-feather="user"></i><span
+                        class="menu-title text-truncate" data-i18n="Facility">Facility</span></a>
+
             </li>
-            <li class="<%= (url.includes("/admin/ammenity"))?'active':'' %> nav-item"><a class="d-flex align-items-center " href="/admin/ammenity"><i
-                        data-feather="user"></i><span class="menu-title text-truncate"
-                        data-i18n="Ammenity">Ammenity</span></a>
-                         
+            <li class="<%= (url.includes("/admin/ammenity"))?'active':'' %> nav-item"><a
+                    class="d-flex align-items-center " href="/admin/ammenity"><i data-feather="user"></i><span
+                        class="menu-title text-truncate" data-i18n="Ammenity">Ammenity</span></a>
+
             </li>
 
 
             <li class=" navigation-header"><span data-i18n="Page Settings">Page Settings</span><i
-                data-feather="more-horizontal"></i>
+                    data-feather="more-horizontal"></i>
             </li>
-            
+
             <!-- general Settings -->
-            <li class="<%= (url.includes("/admin/country"))?'active':'' %> nav-item"><a class="d-flex align-items-center " href="/admin/country"><i
-                        data-feather="user"></i><span class="menu-title text-truncate"
-                        data-i18n="Country">Country</span></a>
-                         
+            <li class="<%= (url.includes("/admin/country"))?'active':'' %> nav-item"><a
+                    class="d-flex align-items-center " href="/admin/country"><i data-feather="user"></i><span
+                        class="menu-title text-truncate" data-i18n="Country">Country</span></a>
+
             </li>
-            <li class="<%= (url.includes("/admin/state"))?'active':'' %> nav-item"><a class="d-flex align-items-center " href="/admin/state"><i
-                        data-feather="user"></i><span class="menu-title text-truncate"
+            <li class="<%= (url.includes("/admin/state"))?'active':'' %> nav-item"><a class="d-flex align-items-center "
+                    href="/admin/state"><i data-feather="user"></i><span class="menu-title text-truncate"
                         data-i18n="State">State</span></a>
-                         
+
             </li>
         </ul>
     </div>
