--- a/views/admin/ammenity/edit.ejs
+++ b/views/admin/ammenity/edit.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<% layout('layouts/boilerplate') %>
 
 <!-- BEGIN: Content-->
 <div class="app-content content ">
@@ -44,19 +44,25 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Name</label>
-                                                <input type="text" class="form-control" id="name" value="<%= ammenity.name  %>" name="ammenity[name]" placeholder="Name" />
+                                                <input type="text" class="form-control" id="name"
+                                                    value="<%= ammenity.name  %>" name="ammenity[name]"
+                                                    placeholder="Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="quantity">Quantity</label>
-                                                <input type="text" class="form-control" id="quantity" value="<%= ammenity.quantity  %>" name="ammenity[quantity]" placeholder="Quantity" />
+                                                <input type="text" class="form-control" id="quantity"
+                                                    value="<%= ammenity.quantity  %>" name="ammenity[quantity]"
+                                                    placeholder="Quantity" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="price_per_unit">Price Per Unit</label>
-                                                <input type="text" class="form-control" id="price_per_unit" value="<%= ammenity.price_per_unit  %>" name="ammenity[price_per_unit]" placeholder="Price Per Unit" />
+                                                <input type="text" class="form-control" id="price_per_unit"
+                                                    value="<%= ammenity.price_per_unit  %>"
+                                                    name="ammenity[price_per_unit]" placeholder="Price Per Unit" />
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
@@ -76,7 +82,7 @@
 
 
 
-            
+
         </div>
     </div>
 </div>
