--- a/views/admin/customer/create.ejs
+++ b/views/admin/customer/create.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<% layout('layouts/boilerplate') %>
 
 <!-- BEGIN: Content-->
 <div class="app-content content ">
@@ -39,49 +39,57 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
-                                                <input type="text" class="form-control" id="fname" name="customer[fname]" placeholder="First Name" />
+                                                <input type="text" class="form-control" id="fname"
+                                                    name="customer[fname]" placeholder="First Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="lname">Last Name</label>
-                                                <input type="text" class="form-control" id="lname" name="customer[lname]" placeholder="Last Name" />
+                                                <input type="text" class="form-control" id="lname"
+                                                    name="customer[lname]" placeholder="Last Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="email">Email</label>
-                                                <input type="text" class="form-control" id="email" name="customer[email]" placeholder="Enter email" />
+                                                <input type="text" class="form-control" id="email"
+                                                    name="customer[email]" placeholder="Enter email" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="mobile">Mobile</label>
-                                                <input type="text" class="form-control" id="mobile" name="customer[mobile]" placeholder="Enter Mobile" />
+                                                <input type="text" class="form-control" id="mobile"
+                                                    name="customer[mobile]" placeholder="Enter Mobile" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="nic">NIC</label>
-                                                <input type="text" class="form-control" id="nic" name="customer[nic]" placeholder="NIC" />
+                                                <input type="text" class="form-control" id="nic" name="customer[nic]"
+                                                    placeholder="NIC" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="dob">DOB</label>
-                                                <input type="date" class="form-control" id="dob" name="customer[dob]" placeholder="dob" />
+                                                <input type="date" class="form-control" id="dob" name="customer[dob]"
+                                                    placeholder="dob" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="address">Address</label>
-                                                <input type="text" class="form-control" id="address" name="customer[address]" placeholder="Address" />
+                                                <input type="text" class="form-control" id="address"
+                                                    name="customer[address]" placeholder="Address" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="city">City</label>
-                                                <input type="text" class="form-control" id="city" name="customer[city]" placeholder="City" />
+                                                <input type="text" class="form-control" id="city" name="customer[city]"
+                                                    placeholder="City" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -117,7 +125,7 @@
                 </div>
             </section>
             <!-- Basic Inputs end -->
-            </div>
+        </div>
 
     </div>
 </div>
