--- a/views/admin/customer/edit.ejs
+++ b/views/admin/customer/edit.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<% layout('layouts/boilerplate') %>
 
 <!-- BEGIN: Content-->
 <div class="app-content content ">
@@ -39,61 +39,79 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
-                                                <input type="text" class="form-control" id="fname" value="<%=customer.fname%>" name="customer[fname]" placeholder="First Name" />
+                                                <input type="text" class="form-control" id="fname"
+                                                    value="<%=customer.fname%>" name="customer[fname]"
+                                                    placeholder="First Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="lname">Last Name</label>
-                                                <input type="text" class="form-control" id="lname" value="<%=customer.lname%>" name="customer[lname]" placeholder="Last Name" />
+                                                <input type="text" class="form-control" id="lname"
+                                                    value="<%=customer.lname%>" name="customer[lname]"
+                                                    placeholder="Last Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="email">Email</label>
-                                                <input type="text" class="form-control" id="email" value="<%=customer.email%>" name="customer[email]" placeholder="Enter email" />
+                                                <input type="text" class="form-control" id="email"
+                                                    value="<%=customer.email%>" name="customer[email]"
+                                                    placeholder="Enter email" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="mobile">Mobile</label>
-                                                <input type="text" class="form-control" id="mobile" value="<%=customer.mobile%>" name="customer[mobile]" placeholder="Enter Mobile" />
+                                                <input type="text" class="form-control" id="mobile"
+                                                    value="<%=customer.mobile%>" name="customer[mobile]"
+                                                    placeholder="Enter Mobile" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="nic">NIC</label>
-                                                <input type="text" class="form-control" id="nic" value="<%=customer.nic%>" name="customer[nic]" placeholder="NIC" />
+                                                <input type="text" class="form-control" id="nic"
+                                                    value="<%=customer.nic%>" name="customer[nic]" placeholder="NIC" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="dob">DOB</label>
-                                                <input type="date" class="form-control" id="dob" value="<%=customer.dob%>" name="customer[dob]" placeholder="dob" />
+                                                <input type="date" class="form-control" id="dob"
+                                                    value="<%=customer.dob%>" name="customer[dob]" placeholder="dob" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="address">Address</label>
-                                                <input type="text" class="form-control" id="address" value="<%=customer.address%>" name="customer[address]" placeholder="Address" />
+                                                <input type="text" class="form-control" id="address"
+                                                    value="<%=customer.address%>" name="customer[address]"
+                                                    placeholder="Address" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="city">City</label>
-                                                <input type="text" class="form-control" id="city" value="<%=customer.city%>" name="customer[city]" placeholder="City" />
+                                                <input type="text" class="form-control" id="city"
+                                                    value="<%=customer.city%>" name="customer[city]"
+                                                    placeholder="City" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="state">State</label>
-                                                <input type="text" class="form-control" id="state" value="<%=customer.state%>" name="customer[state]" placeholder="State" />
+                                                <input type="text" class="form-control" id="state"
+                                                    value="<%=customer.state%>" name="customer[state]"
+                                                    placeholder="State" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="country">Country</label>
-                                                <input type="text" class="form-control" id="country" value="<%=customer.country%>" name="customer[country]" placeholder="Country" />
+                                                <input type="text" class="form-control" id="country"
+                                                    value="<%=customer.country%>" name="customer[country]"
+                                                    placeholder="Country" />
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
