--- a/views/admin/user/create.ejs
+++ b/views/admin/user/create.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<% layout('layouts/boilerplate') %>
 
 <!-- BEGIN: Content-->
 <div class="app-content content ">
@@ -39,13 +39,15 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
-                                                <input type="text" class="form-control" id="fname" name="user[fname]" placeholder="First Name" />
+                                                <input type="text" class="form-control" id="fname" name="user[fname]"
+                                                    placeholder="First Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="lname">Last Name</label>
-                                                <input type="text" class="form-control" id="lname" name="user[lname]" placeholder="Last Name" />
+                                                <input type="text" class="form-control" id="lname" name="user[lname]"
+                                                    placeholder="Last Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -55,25 +57,28 @@
                                                     <option value="a">Admin</option>
                                                     <option value="r">Receptionist</option>
                                                 </select>
-                                            
+
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="email">Email</label>
-                                                <input type="text" class="form-control" id="email" name="user[email]" placeholder="Enter email" />
+                                                <input type="text" class="form-control" id="email" name="user[email]"
+                                                    placeholder="Enter email" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="username">Username</label>
-                                                <input type="text" class="form-control" id="username" name="user[username]" placeholder="Username" />
+                                                <input type="text" class="form-control" id="username"
+                                                    name="user[username]" placeholder="Username" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="password">Password</label>
-                                                <input type="password" class="form-control" id="password" name="user[password]" placeholder="Password" />
+                                                <input type="password" class="form-control" id="password"
+                                                    name="user[password]" placeholder="Password" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -89,7 +94,7 @@
                 </div>
             </section>
             <!-- Basic Inputs end -->
-            </div>
+        </div>
 
     </div>
 </div>
