--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<% layout('layouts/boilerplate') %>
 
 <!-- BEGIN: Content-->
 <div class="app-content content ">
@@ -15,8 +15,8 @@
                     <div class="col-lg-6 col-md-12 col-sm-12">
                         <div class="card card-congratulations">
                             <div class="card-body text-center">
-                                <img src="/app-assets/images/elements/decore-left.png"
-                                    class="congratulations-img-left" alt="card-img-left" />
+                                <img src="/app-assets/images/elements/decore-left.png" class="congratulations-img-left"
+                                    alt="card-img-left" />
                                 <img src="/app-assets/images/elements/decore-right.png"
                                     class="congratulations-img-right" alt="card-img-right" />
                                 <div class="avatar avatar-xl bg-primary shadow">
