--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -6,10 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0,minimal-ui">
-    <meta name="description"
-        content="">
-    <meta name="keywords"
-        content="">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <meta name="author" content="PIXINVENT">
     <title>SPM-Assignment - </title>
     <link rel="apple-touch-icon" href="/app-assets/images/ico/apple-icon-120.png">
@@ -69,12 +67,12 @@
 
     <%- include('../partials/navbar') %>
     <%- include('../partials/sidebar') %>
-<!-- <div class="pt-5">
+    <!-- <div class="pt-5">
 <div class="pt-5"> -->
 
     <%- include('../partials/flash') %>
     <%- body %>
-<!-- </div>
+    <!-- </div>
 </div> -->
 
 
