--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,8 @@
  <!-- BEGIN: Header-->
  <nav class="header-navbar navbar navbar-expand-lg align-items-center floating-nav navbar-light navbar-shadow">
-  <div class="navbar-container d-flex content">
-      <div class="bookmark-wrapper d-flex align-items-center">
-          <!-- <ul class="nav navbar-nav d-xl-none">
+     <div class="navbar-container d-flex content">
+         <div class="bookmark-wrapper d-flex align-items-center">
+             <!-- <ul class="nav navbar-nav d-xl-none">
               <li class="nav-item"><a class="nav-link menu-toggle" href="javascript:void(0);"><i class="ficon" data-feather="menu"></i></a></li>
           </ul>
           <ul class="nav navbar-nav bookmark-icons">
@@ -20,13 +20,14 @@
                   </div>
               </li>
           </ul> -->
-      </div>
-      <ul class="nav navbar-nav align-items-center ml-auto">
-          <!-- <li class="nav-item dropdown dropdown-language"><a class="nav-link dropdown-toggle" id="dropdown-flag" href="javascript:void(0);" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="flag-icon flag-icon-us"></i><span class="selected-language">English</span></a>
+         </div>
+         <ul class="nav navbar-nav align-items-center ml-auto">
+             <!-- <li class="nav-item dropdown dropdown-language"><a class="nav-link dropdown-toggle" id="dropdown-flag" href="javascript:void(0);" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="flag-icon flag-icon-us"></i><span class="selected-language">English</span></a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-flag"><a class="dropdown-item" href="javascript:void(0);" data-language="en"><i class="flag-icon flag-icon-us"></i> English</a><a class="dropdown-item" href="javascript:void(0);" data-language="fr"><i class="flag-icon flag-icon-fr"></i> French</a><a class="dropdown-item" href="javascript:void(0);" data-language="de"><i class="flag-icon flag-icon-de"></i> German</a><a class="dropdown-item" href="javascript:void(0);" data-language="pt"><i class="flag-icon flag-icon-pt"></i> Portuguese</a></div>
           </li> -->
-          <li class="nav-item d-none d-lg-block"><a class="nav-link nav-link-style"><i class="ficon" data-feather="moon"></i></a></li>
-          <!-- <li class="nav-item nav-search"><a class="nav-link nav-link-search"><i class="ficon" data-feather="search"></i></a>
+             <li class="nav-item d-none d-lg-block"><a class="nav-link nav-link-style"><i class="ficon"
+                         data-feather="moon"></i></a></li>
+             <!-- <li class="nav-item nav-search"><a class="nav-link nav-link-search"><i class="ficon" data-feather="search"></i></a>
               <div class="search-input">
                   <div class="search-input-icon"><i data-feather="search"></i></div>
                   <input class="form-control input" type="text" placeholder="Explore Vuexy..." tabindex="-1" data-search="search">
@@ -34,7 +35,7 @@
                   <ul class="search-list search-list-main"></ul>
               </div>
           </li> -->
-          <!-- <li class="nav-item dropdown dropdown-cart mr-25"><a class="nav-link" href="javascript:void(0);" data-toggle="dropdown"><i class="ficon" data-feather="shopping-cart"></i><span class="badge badge-pill badge-primary badge-up cart-item-count">6</span></a>
+             <!-- <li class="nav-item dropdown dropdown-cart mr-25"><a class="nav-link" href="javascript:void(0);" data-toggle="dropdown"><i class="ficon" data-feather="shopping-cart"></i><span class="badge badge-pill badge-primary badge-up cart-item-count">6</span></a>
               <ul class="dropdown-menu dropdown-menu-media dropdown-menu-right">
                   <li class="dropdown-menu-header">
                       <div class="dropdown-header d-flex">
@@ -117,7 +118,7 @@
                   </li>
               </ul>
           </li> -->
-          <!-- <li class="nav-item dropdown dropdown-notification mr-25"><a class="nav-link" href="javascript:void(0);" data-toggle="dropdown"><i class="ficon" data-feather="bell"></i><span class="badge badge-pill badge-danger badge-up">5</span></a>
+             <!-- <li class="nav-item dropdown dropdown-notification mr-25"><a class="nav-link" href="javascript:void(0);" data-toggle="dropdown"><i class="ficon" data-feather="bell"></i><span class="badge badge-pill badge-danger badge-up">5</span></a>
               <ul class="dropdown-menu dropdown-menu-media dropdown-menu-right">
                   <li class="dropdown-menu-header">
                       <div class="dropdown-header d-flex">
@@ -199,19 +200,27 @@
                   <li class="dropdown-menu-footer"><a class="btn btn-primary btn-block" href="javascript:void(0)">Read all notifications</a></li>
               </ul>
           </li> -->
-          <% if(currentUser){ %> 
-          <li class="nav-item dropdown dropdown-user"><a class="nav-link dropdown-toggle dropdown-user-link" id="dropdown-user" href="javascript:void(0);" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <div class="user-nav d-sm-flex d-none"><span class="user-name font-weight-bolder"><%= currentUser.fname %> <%= currentUser.lname  %> </span><span class="user-status"><%= (currentUser.role=="a")?"Admin":((currentUser.role=="r")?"Receptionist":'') %></span></div><span class="avatar"><img class="round" src="/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar" height="40" width="40"><span class="avatar-status-online"></span></span>
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-user">
-                  <a class="dropdown-item" href="/logout"><i class="mr-50" data-feather="power"></i> Logout</a>
-              </div>
-          </li>
-          <% } %> 
-      </ul>
-  </div>
-</nav>
-<!-- <ul class="main-search-list-defaultlist d-none">
+             <% if(currentUser){ %>
+             <li class="nav-item dropdown dropdown-user"><a class="nav-link dropdown-toggle dropdown-user-link"
+                     id="dropdown-user" href="javascript:void(0);" data-toggle="dropdown" aria-haspopup="true"
+                     aria-expanded="false">
+                     <div class="user-nav d-sm-flex d-none"><span
+                             class="user-name font-weight-bolder"><%= currentUser.fname %> <%= currentUser.lname  %>
+                         </span><span
+                             class="user-status"><%= (currentUser.role=="a")?"Admin":((currentUser.role=="r")?"Receptionist":'') %></span>
+                     </div><span class="avatar"><img class="round"
+                             src="/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar" height="40"
+                             width="40"><span class="avatar-status-online"></span></span>
+                 </a>
+                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-user">
+                     <a class="dropdown-item" href="/logout"><i class="mr-50" data-feather="power"></i> Logout</a>
+                 </div>
+             </li>
+             <% } %>
+         </ul>
+     </div>
+ </nav>
+ <!-- <ul class="main-search-list-defaultlist d-none">
   <li class="d-flex align-items-center"><a href="javascript:void(0);">
           <h6 class="section-label mt-75 mb-0">Files</h6>
       </a></li>
@@ -283,9 +292,11 @@
           </div>
       </a></li>
 </ul> -->
-<ul class="main-search-list-defaultlist-other-list d-none">
-  <li class="auto-suggestion justify-content-between"><a class="d-flex align-items-center justify-content-between w-100 py-50">
-          <div class="d-flex justify-content-start"><span class="mr-75" data-feather="alert-circle"></span><span>No results found.</span></div>
-      </a></li>
-</ul>
-<!-- END: Header-->
+ <ul class="main-search-list-defaultlist-other-list d-none">
+     <li class="auto-suggestion justify-content-between"><a
+             class="d-flex align-items-center justify-content-between w-100 py-50">
+             <div class="d-flex justify-content-start"><span class="mr-75" data-feather="alert-circle"></span><span>No
+                     results found.</span></div>
+         </a></li>
+ </ul>
+ <!-- END: Header-->
