--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -127,11 +127,13 @@
                                                 <form action="/login" method="post">
                                                     <div class="form-group">
                                                         <label>Username</label> <input class="form-control"
-                                                            placeholder="Enter your Username" type="text" id="username" name="username">
+                                                            placeholder="Enter your Username" type="text" id="username"
+                                                            name="username">
                                                     </div>
                                                     <div class="form-group">
                                                         <label>Password</label> <input class="form-control"
-                                                            placeholder="Enter your password" type="password" id="password" name="password">
+                                                            placeholder="Enter your password" type="password"
+                                                            id="password" name="password">
                                                     </div><button class="btn btn-main-primary btn-block">Sign
                                                         In</button>
                                                 </form>
