--- a/views/admin/facility/create.ejs
+++ b/views/admin/facility/create.ejs
@@ -61,7 +61,7 @@
                                             <div class="form-group">
                                                 <label for="price">Price</label>
                                                 <input type="text" class="form-control" id="price"
-                                                    name="facility[price]" placeholder="Head Count" />
+                                                    name="facility[price]" placeholder="Price" />
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
