--- a/views/admin/package/create.ejs
+++ b/views/admin/package/create.ejs
@@ -60,9 +60,11 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="facilities">Facilities</label>
-                                                <select class="form-control" id="facilities" name="package[facilities]">
-                                                    <option value="Seasonal">Seasonal</option>
-                                                    <option value="Regular">Regular</option>
+                                                <select class="form-control" id="facilities" name="package[facilities]" >
+                                                    <option label="Select Facilities"></option>
+                                                    <% for(let facility of data['facility']){ %>
+                                                        <option value="<%= facility._id %> "><%= facility.name  %> </option>
+                                                    <%  } %>
                                                 </select>
                                             </div>
                                         </div>
@@ -70,8 +72,11 @@
                                             <div class="form-group">
                                                 <label for="ammenities">Ammenities</label>
                                                 <select class="form-control" id="ammenities" name="package[ammenities]">
-                                                    <option value="Seasonal">Seasonal</option>
-                                                    <option value="Regular">Regular</option>
+                                                    <option label="Select Ammenities"></option>
+                                                    <% for(let amenities of data['amenities']){ %>
+                                                        <option value="<%= amenities._id %>"><%= amenities.name  %> </option>
+                                                    <%  } %>
+                                                    
                                                 </select>
                                             </div>
                                         </div>
