--- a/views/admin/customer/create.ejs
+++ b/views/admin/customer/create.ejs
@@ -40,41 +40,41 @@
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
                                                 <input type="text" class="form-control" id="fname"
-                                                    name="customer[fname]" placeholder="First Name" />
+                                                    required name="customer[fname]" placeholder="First Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="lname">Last Name</label>
                                                 <input type="text" class="form-control" id="lname"
-                                                    name="customer[lname]" placeholder="Last Name" />
+                                                    required name="customer[lname]" placeholder="Last Name" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="email">Email</label>
                                                 <input type="text" class="form-control" id="email"
-                                                    name="customer[email]" placeholder="Enter email" />
+                                                    required name="customer[email]" placeholder="Enter email" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="mobile">Mobile</label>
                                                 <input type="text" class="form-control" id="mobile"
-                                                    name="customer[mobile]" placeholder="Enter Mobile" />
+                                                    required name="customer[mobile]" placeholder="Enter Mobile" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="nic">NIC</label>
-                                                <input type="text" class="form-control" id="nic" name="customer[nic]"
+                                                <input type="text" class="form-control" id="nic" required name="customer[nic]"
                                                     placeholder="NIC" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="dob">DOB</label>
-                                                <input type="date" class="form-control" id="dob" name="customer[dob]"
+                                                <input type="date" class="form-control" id="dob" required name="customer[dob]"
                                                     placeholder="dob" />
                                             </div>
                                         </div>
@@ -82,20 +82,20 @@
                                             <div class="form-group">
                                                 <label for="address">Address</label>
                                                 <input type="text" class="form-control" id="address"
-                                                    name="customer[address]" placeholder="Address" />
+                                                    required name="customer[address]" placeholder="Address" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="city">City</label>
-                                                <input type="text" class="form-control" id="city" name="customer[city]"
+                                                <input type="text" class="form-control" id="city" required name="customer[city]"
                                                     placeholder="City" />
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="state">State</label>
-                                                <select class="form-control" id="state" name="customer[state]">
+                                                <select class="form-control" id="state" required name="customer[state]">
                                                     <% for(let state of data['states']){ %>
                                                     <option value="<%= state._id %>"><%= state.name %> </option>
                                                     <%  } %>
@@ -105,9 +105,9 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="country">Country</label>
-                                                <select class="form-control" id="country" name="customer[country]">
+                                                <select class="form-control" id="country" required name="customer[country]">
                                                     <% for(let country of data['countries']){ %>
-                                                    <option value="<% country._id %> "><%= country.name %> </option>
+                                                    <option value="<%= country._id %>"><%= country.name %> </option>
                                                     <%  } %>
                                                 </select>
                                             </div>
