--- a/views/admin/user/create.ejs
+++ b/views/admin/user/create.ejs
@@ -52,7 +52,7 @@
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
-                                                <label for="role">Last Name</label>
+                                                <label for="role">Role</label>
                                                 <select class="form-control" name="user[role]" id="role">
                                                     <option value="a">Admin</option>
                                                     <option value="r">Receptionist</option>
