--- a/views/admin/user/edit.ejs
+++ b/views/admin/user/edit.ejs
@@ -54,7 +54,7 @@
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
-                                                <label for="role">Last Name</label>
+                                                <label for="role">Role</label>
                                                 <select class="form-control" value="<%=user.role%>" name="user[role]"
                                                     id="role">
                                                     <option value="a">Admin</option>
