--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,10 +1,10 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-    <div class="col-6 offset-3">
+<div class="row mt5">
+    <div class="col-6 offset-3 mt-5">
         <div class="alert alert-danger" role="alert">
             <h4 class="alert-heading"><%= err.message  %> </h4>
             <% if(process.env.NODE_ENV !== 'production'){ %>
-            <p><%= err.stack %> </p>
+            <!-- <p><%= err.stack %> </p> -->
             <% } %>
         </div>
     </div>
