--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -121,7 +121,8 @@
     <script src="/app-assets/vendors/js/pickers/flatpickr/flatpickr.min.js"></script>
     <!-- END: Page Vendor JS-->
 
-    <script src="/app-assets/js/scripts/tables/table-datatables-basic.js"></script>
+    <script src="/js/data-table.js"></script>
+    <!-- <script src="/app-assets/js/scripts/tables/table-datatables-basic.js"></script> -->
     <script>
         $(window).on('load', function () {
             if (feather) {
