--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,18 +1,12 @@
 <% if(success && success.length){ %>
-<script>
-    toast_preview(success)
-</script>
-<!-- <div class="alert alert-success alert-dismissible fade show" role="alert">
+<div class="alert alert-success alert-dismissible fade show" role="alert">
     <%= success %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div> -->
+</div>
 <% }  %>
 <% if(error && error.length){ %>
-<!-- <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <%= error %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div> -->
-<script>
-    toast_preview(error)
-</script>
+</div>
 <% }  %>
